2004-05-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/define-grobs.scm (all-grob-descriptions): remove
	break-visibility. Should fix: bugs/piano-repeat.ly

	* lily/chord-tremolo-engraver.cc (stop_translation_timestep):
	reset repeat_ after setting stem tremolo. Should fix:
	bugs/tremolo-repeat.ly

	* lily/accidental-engraver.cc (set_property_on_children): copy key
	signature setting. Backport. Should fix:
	bugs/custom-key-signatures.ly

2004-05-27  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/context-def.cc (filter_engravers): backport.  Fixes:
	crash-bar-number.ly

	* lily/percent-repeat-engraver.cc (try_music): backport. Fixes:
	skipbars-percent-repeat.ly

2004-05-19  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/rest-collision.cc (do_shift): handle (0-down, 2-up) case
	too.

2004-05-04  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/ottava-bracket.cc (print): fix ottava on rests.

2004-05-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: release 2.2.1
	
	* scm/music-functions.scm (set-accidental-style): use GrandStaff
	iso. PianoStaff.

2004-05-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/lilypond.tely (Top): update version number.

	* lily/lyric-engraver.cc (get_voice_to_lyrics): go higher when
	finding Voice context. 

	* Documentation/user/music-glossary.tely (Top): replace table strong
	with table samp.

	* lily/stem.cc (get_default_stem_end_position): handle dir==0
	case. This fixes a bugs/tremolo-repeat

	* Documentation/user/introduction.itely (About this manual): fix
	URLS.

2004-04-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond.py: Handle --set=fontencoding=FONTENC (default:
	unset) and --set=inputencoding=INPUTENC (default: latin1).

2004-04-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/convert-ly.py: backport of #'(markup).

2004-04-01  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): release 2.2.0

	* scripts/convert-ly.py (conv): add 2.2.0 rule.
